<resources>
    <string name="app_name">CRUD</string>
    <string name="name">name</string>
    <string name="nim">nim</string>
    <string name="majors">majors</string>
    <string name="masukkan_nim">Masukkan Nim</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukan_jurusan">Masukan Jurusan</string>
    <string name="action_settings">Settings</string>
    <string name="input">Input Data Mahasiswa</string>
    <string name="y">YES</string>
    <string name="n">NO</string>
    <string name="delete">delete</string>
    <string name="nama">Fiqri Hafzain Islami</string>
    <string name="jur">Computer Science</string>
    <string name="nimm">121212324</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confrimation">Confirmation</string>
    <string name="deletee">Are you sure for delete this data?</string>
    <string name="update">Are you sure for update this data?</string>
</resources>
